committing test boxscore dataframe buildup
Streamlined box score info to dataframe

Since we already know what order the boxscore data will be listed in the dataframe, we can remove the 'Dates', and 'Home/Away' dictionaries

--- a/Basketball Analysis/GettingBoxscores.ipynb
+++ b/Basketball Analysis/GettingBoxscores.ipynb
@@ -11,95 +11,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c916f2a-cd29-4cb5-9f33-97495057713a",
+   "id": "cb5eae1c-9c46-466e-8e2c-a3de37039e0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Goal:\n",
     "Collect the box scores of every NBA regular game matchup in the 2022-23 season.\n",
-    "\n",
     "Eventually, this will serve to help illustrate the ebs and flows of shooting accuaracy throughout the course of an NBA season.\n",
-    "\n",
     "Could we see whether there are such moments where the league, as a whole, exhibit shooting slumps?\n",
-    "\n",
     "\"\"\"\n",
     "\n",
-    "# importing necessaries\n",
+    "# Get BoxScore\n",
     "from nba_api.live.nba.endpoints import boxscore\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "# Define gameID base value for 2022-23 regular season NBA games \n",
     "gameID_base = '00222{}'\n",
     "\n",
     "# Test boxscore variable\n",
-    "test_box = boxscore.BoxScore('0022200001')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d955966-aa8e-43d6-a742-c1d793ccb88f",
-   "metadata": {},
-   "source": [
-    "## Creating dictionaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fd1c15a-10ce-4d89-90eb-9a07454df4d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a working dictionary\n",
-    "box_dict = {'Date':[], 'Home/Away':[]}\n",
+    "test_box = boxscore.BoxScore('0022200001')\n",
     "\n",
     "# create a blank dictionary, adopting the box score statistic's keys \n",
     "stats_key_dictionary = dict.fromkeys(test_box.get_dict()['game']['homeTeam']['statistics'].keys(), [])\n",
     "\n",
-    "# update box_dict with keys from ['statistics].keys() call\n",
-    "starting_dict.update(box_dictionary)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27a2cfaf-9f64-43a7-a856-5f0e750ebc55",
-   "metadata": {},
-   "source": [
-    "## Creating loop to fill dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25d556db-5d9f-452b-86f8-bb8d277e5a09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loop through each matchup and collect home and away box score data \n",
-    "# test loop to go through first five games of 2022-23 season\n",
+    "# create blank dataframe\n",
+    "box_df = pd.DataFrame.from_dict(stats_key_dictionary, orient='index').T\n",
+    "# loop through each matchup and collect home and away box score data dictionaries\n",
+    "# appends dictionaries into dataframe\n",
+    "# test loop\n",
     "for i in range(1,5):\n",
-    "    gameID = str(i).zfill(5) #avoids leading zero issues\n",
-    "    print(gameID) #check gameID result\n",
-    "    \n",
+    "    gameID_last_5_digits = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
+    "    print(gameID)\n",
     "    # calls on API to retrieve the boxscores data of the first five games\n",
-    "    box_first_five = boxscore.BoxScore(gameID_base.format(gameID))\n",
+    "    box_first_five = boxscore.BoxScore(gameID)\n",
+    "   \n",
+    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['awayTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
     "    \n",
-    "    # create variable that holds the match's datetime\n",
-    "    date_dict = {\"Date\": [box_first_five.get_dict()['game']['gameEt']]}\n",
-    "    print(date_dict) #print as necesssary\n",
-    "    print(type(date_dict))\n",
+    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['homeTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
     "    \n",
-    "    # calling to get home and away box score data\n",
-    "    away_box_dict = box_first_five.get_dict()['game']['awayTeam']['statistics']\n",
-    "    home_box_dict = box_first_five.get_dict()['game']['homeTeam']['statistics']\n",
-    "    \n",
-    "    # have new dictionary read into dataframe\n",
-    "    away_df = pd.DataFrame.from_dict(away_box, orient='index').T\n",
-    "    print(away_df) #print away dataframe as necessary\n",
-    "    home_df = pd.DataFrame.from_dict(home_box, orient='index').T\n",
-    "    print(home_df) #print home dataframe as necessary\n",
-    "    "
+    "print(box_df)"
    ]
   },
   {
