breaking up calls
getting timeout errors so we'll break the season up into 4 separate calls

--- a/Basketball Analysis/GettingBoxscores.ipynb
+++ b/Basketball Analysis/GettingBoxscores.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5eae1c-9c46-466e-8e2c-a3de37039e0d",
+   "id": "636073c5-4f38-4240-8567-8d3e996ef2bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,16 @@
     "stats_key_dictionary = dict.fromkeys(test_box.get_dict()['game']['homeTeam']['statistics'].keys(), [])\n",
     "\n",
     "# create blank dataframe\n",
-    "box_df = pd.DataFrame.from_dict(stats_key_dictionary, orient='index').T\n",
+    "box_df = pd.DataFrame.from_dict(stats_key_dictionary, orient='index').T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "804fc5d5-2c6a-45fc-99a7-958bb7fd036d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# loop through each matchup and collect home and away box score data dictionaries\n",
     "# appends dictionaries into dataframe\n",
     "# test loop\n",
@@ -52,6 +61,167 @@
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
     "    \n",
     "    stats_key_dictionary.update(box_first_five.get_dict()['game']['homeTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "print(box_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ebb92b5-fdf9-44ff-9558-80561bb138d1",
+   "metadata": {},
+   "source": [
+    "## Loop through each match, collect home and away box score data, and append dictionaries into a single dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f2ffed2-5978-4341-ab95-5719233d7c8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through each matchup and collect home and away box score data dictionaries\n",
+    "# appends dictionaries into dataframe\n",
+    "# test loop (first 5 games of the 2022-23 season)\n",
+    "for i in range(1,6):\n",
+    "    gameID_last_5_digits = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
+    "    print(gameID)\n",
+    "    # calls on API to retrieve the boxscores data of the first five games\n",
+    "    box_first_five = boxscore.BoxScore(gameID)\n",
+    "   \n",
+    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['awayTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['homeTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "print(box_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54cdefcc-57a2-4e65-bc06-55feb62811b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through each matchup and collect home and away box score data dictionaries\n",
+    "# appends dictionaries into dataframe\n",
+    "# test loop (first 100 games of the 2022-23 season)\n",
+    "for i in range(1,101):\n",
+    "    gameID_last_5_digits = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
+    "    print(gameID)\n",
+    "    \n",
+    "    # calls on API to retrieve the boxscores data of the first five games\n",
+    "    box_first_five = boxscore.BoxScore(gameID)\n",
+    "   \n",
+    "    stats_key_dictionary.update(box_first_100.get_dict()['game']['awayTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "    stats_key_dictionary.update(box_first_100.get_dict()['game']['homeTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "print(box_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ff77b33-3313-4fd4-ac42-d5a5926699b8",
+   "metadata": {},
+   "source": [
+    "Calls for the first 500 games failed at game 0022200400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a53935e-3a27-40eb-b420-8d3c3a2bcfc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through each matchup and collect home and away box score data dictionaries\n",
+    "# appends dictionaries into dataframe\n",
+    "# test loop (first 500 games of the 2022-23 season)\n",
+    "for i in range(1,501):\n",
+    "    gameID_last_5_digits = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
+    "    print(gameID)\n",
+    "    \n",
+    "    # calls on API to retrieve the boxscores data of the first five games\n",
+    "    box_first_five = boxscore.BoxScore(gameID)\n",
+    "   \n",
+    "    stats_key_dictionary.update(box_first_500.get_dict()['game']['awayTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "    stats_key_dictionary.update(box_first_500.get_dict()['game']['homeTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "print(box_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e67b45e-0e1e-4290-8dce-97874de64f8b",
+   "metadata": {},
+   "source": [
+    "Error thrown:\n",
+    "```python\n",
+    "C:AppData\\Local\\Temp\\ipykernel_23008\\2029473471.py:30: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "0022200399\n",
+    "0022200400\n",
+    "Traceback (most recent call last):\n",
+    "\n",
+    "  File ~\\anaconda3\\envs\\env_3_10_8\\lib\\site-packages\\urllib3\\connection.py:174 in _new_conn\n",
+    "    conn = connection.create_connection(\n",
+    "\n",
+    "  File ~\\anaconda3\\envs\\env_3_10_8\\lib\\site-packages\\urllib3\\util\\connection.py:95 in create_connection\n",
+    "    raise err\n",
+    "\n",
+    "  File ~\\anaconda3\\envs\\env_3_10_8\\lib\\site-packages\\urllib3\\util\\connection.py:85 in create_connection\n",
+    "    sock.connect(sa)\n",
+    "\n",
+    "TimeoutError: [WinError 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5d57635-53a0-47ab-b080-f2b3502d7bbf",
+   "metadata": {},
+   "source": [
+    "We'll instead break up the calls into four intervals of 320 games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f358d50-9442-4ae1-8c64-b0712f6a3de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through each matchup and collect home and away box score data dictionaries\n",
+    "# appends dictionaries into dataframe\n",
+    "# test loops\n",
+    "\n",
+    "#for i in range(1,321):\n",
+    "#for i in range(321,642):\n",
+    "#for i in range(642,963):\n",
+    "#for i in range(963,1231):\n",
+    "    gameID_last_5_digits = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
+    "    print(gameID)\n",
+    "    \n",
+    "    # calls on API to retrieve the boxscores data of the first five games\n",
+    "    box_call = boxscore.BoxScore(gameID)\n",
+    "   \n",
+    "    stats_key_dictionary.update(box_call.get_dict()['game']['awayTeam']['statistics'])\n",
+    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    \n",
+    "    stats_key_dictionary.update(box_call.get_dict()['game']['homeTeam']['statistics'])\n",
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
     "    \n",
     "print(box_df)"
