Full API pull and archive
defined methods
pulled all boxscore and misc data (date, gameID, etc.) into dataframe
archived dataframe as CSV

--- a/Basketball Analysis/GettingBoxscores.ipynb
+++ b/Basketball Analysis/GettingBoxscores.ipynb
@@ -9,24 +9,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "757eb991-f34b-47e6-bd73-75fdc7628166",
+   "metadata": {},
+   "source": [
+    "Goal:\n",
+    "Collect the box scores of every NBA regular game matchup in the 2022-23 season.\n",
+    "Eventually, this will serve to help illustrate the ebs and flows of shooting accuaracy throughout the course of an NBA season.\n",
+    "Could we see whether there are such moments where the league, as a whole, exhibit shooting slumps?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00d71550-897b-44bd-b73b-7f85f2794f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nba_api.live.nba.endpoints import boxscore\n",
+    "import pandas as pd\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c8ae4e6-1a6e-4358-8966-642b2f5b24c3",
+   "metadata": {},
+   "source": [
+    "### Function: get_boxscore_dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37014036-9ea5-49da-b9a1-1158994b22fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function returns list of dates of games played in 2022-23 season   \n",
+    "def get_boxscore_dates():\n",
+    "    for i in range(1, 1231):\n",
+    "        gameID = str(i).zfill(5)\n",
+    "        gameIDs = boxscore.BoxScore(gameID_base.format(gameID))\n",
+    "        dates_list.append(gameIDs.get_dict()['game']['gameEt'])\n",
+    "        time.sleep(1.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "347d995d-44d9-45b7-aa19-63bc5e526b83",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Forming game ID base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "636073c5-4f38-4240-8567-8d3e996ef2bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Goal:\n",
-    "Collect the box scores of every NBA regular game matchup in the 2022-23 season.\n",
-    "Eventually, this will serve to help illustrate the ebs and flows of shooting accuaracy throughout the course of an NBA season.\n",
-    "Could we see whether there are such moments where the league, as a whole, exhibit shooting slumps?\n",
-    "\"\"\"\n",
-    "\n",
-    "# Get BoxScore\n",
-    "from nba_api.live.nba.endpoints import boxscore\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
     "# Define gameID base value for 2022-23 regular season NBA games \n",
     "gameID_base = '00222{}'\n",
     "\n",
@@ -41,29 +86,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "804fc5d5-2c6a-45fc-99a7-958bb7fd036d",
+   "cell_type": "markdown",
+   "id": "255f7015-ddd1-4823-b9e7-f80aa33a871d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# loop through each matchup and collect home and away box score data dictionaries\n",
-    "# appends dictionaries into dataframe\n",
-    "# test loop\n",
-    "for i in range(1,5):\n",
-    "    gameID_last_5_digits = str(i).zfill(5)\n",
-    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
-    "    print(gameID)\n",
-    "    # calls on API to retrieve the boxscores data of the first five games\n",
-    "    box_first_five = boxscore.BoxScore(gameID)\n",
-    "   \n",
-    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['awayTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['homeTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "print(box_df)"
+    "## Getting boxscore data"
    ]
   },
   {
@@ -71,60 +98,7 @@
    "id": "1ebb92b5-fdf9-44ff-9558-80561bb138d1",
    "metadata": {},
    "source": [
-    "## Loop through each match, collect home and away box score data, and append dictionaries into a single dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f2ffed2-5978-4341-ab95-5719233d7c8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loop through each matchup and collect home and away box score data dictionaries\n",
-    "# appends dictionaries into dataframe\n",
-    "# test loop (first 5 games of the 2022-23 season)\n",
-    "for i in range(1,6):\n",
-    "    gameID_last_5_digits = str(i).zfill(5)\n",
-    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
-    "    print(gameID)\n",
-    "    # calls on API to retrieve the boxscores data of the first five games\n",
-    "    box_first_five = boxscore.BoxScore(gameID)\n",
-    "   \n",
-    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['awayTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "    stats_key_dictionary.update(box_first_five.get_dict()['game']['homeTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "print(box_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54cdefcc-57a2-4e65-bc06-55feb62811b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loop through each matchup and collect home and away box score data dictionaries\n",
-    "# appends dictionaries into dataframe\n",
-    "# test loop (first 100 games of the 2022-23 season)\n",
-    "for i in range(1,101):\n",
-    "    gameID_last_5_digits = str(i).zfill(5)\n",
-    "    gameID = gameID_base.format(gameID_last_5_digits)\n",
-    "    print(gameID)\n",
-    "    \n",
-    "    # calls on API to retrieve the boxscores data of the first five games\n",
-    "    box_first_five = boxscore.BoxScore(gameID)\n",
-    "   \n",
-    "    stats_key_dictionary.update(box_first_100.get_dict()['game']['awayTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "    stats_key_dictionary.update(box_first_100.get_dict()['game']['homeTeam']['statistics'])\n",
-    "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "print(box_df)"
+    "### Loop through each match, collect home and away box score data, and append dictionaries into a single dataframe"
    ]
   },
   {
@@ -132,7 +106,7 @@
    "id": "3ff77b33-3313-4fd4-ac42-d5a5926699b8",
    "metadata": {},
    "source": [
-    "Calls for the first 500 games failed at game 0022200400"
+    "Calls for the first half of games failed at game #0022200400"
    ]
   },
   {
@@ -144,22 +118,21 @@
    "source": [
     "# loop through each matchup and collect home and away box score data dictionaries\n",
     "# appends dictionaries into dataframe\n",
-    "# test loop (first 500 games of the 2022-23 season)\n",
-    "for i in range(1,501):\n",
+    "# test loop (first half of 2022-23 season games)\n",
+    "for i in range(1,616):\n",
     "    gameID_last_5_digits = str(i).zfill(5)\n",
     "    gameID = gameID_base.format(gameID_last_5_digits)\n",
-    "    print(gameID)\n",
     "    \n",
     "    # calls on API to retrieve the boxscores data of the first five games\n",
     "    box_first_five = boxscore.BoxScore(gameID)\n",
     "   \n",
     "    stats_key_dictionary.update(box_first_500.get_dict()['game']['awayTeam']['statistics'])\n",
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
+    "    print('Home: ', gameID)\n",
     "    \n",
     "    stats_key_dictionary.update(box_first_500.get_dict()['game']['homeTeam']['statistics'])\n",
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "    \n",
-    "print(box_df)"
+    "    print('Away: ',gameID)\n"
    ]
   },
   {
@@ -171,8 +144,9 @@
     "```python\n",
     "C:AppData\\Local\\Temp\\ipykernel_23008\\2029473471.py:30: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
-    "0022200399\n",
-    "0022200400\n",
+    "Home: 0022200399\n",
+    "Away: 0022200399\n",
+    "\n",
     "Traceback (most recent call last):\n",
     "\n",
     "  File ~\\anaconda3\\envs\\env_3_10_8\\lib\\site-packages\\urllib3\\connection.py:174 in _new_conn\n",
@@ -198,14 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4f358d50-9442-4ae1-8c64-b0712f6a3de1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1985646965.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    gameID_last_5_digits = str(i).zfill(5)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "# loop through each matchup and collect home and away box score data dictionaries\n",
-    "# appends dictionaries into dataframe\n",
-    "# test loops\n",
+    "# loop through each matchup, collect home and away box score data, and append dictionaries to dataframe\n",
     "\n",
     "#for i in range(1,321):\n",
     "#for i in range(321,642):\n",
@@ -224,13 +205,102 @@
     "    stats_key_dictionary.update(box_call.get_dict()['game']['homeTeam']['statistics'])\n",
     "    box_df = box_df.append(stats_key_dictionary, ignore_index=True)\n",
     "    \n",
-    "print(box_df)"
+    "    time.sleep(1) #necessary to help mitigate timeouts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e62844f4-fe5f-475c-918d-213ec14de1ca",
+   "metadata": {},
+   "source": [
+    "### Getting boxscore ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96626089-a9dc-448d-9d0f-657f98f78cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inserting the game IDs into dataframe\n",
+    "gameID_list = []\n",
+    "for i in range(1, 1231):\n",
+    "    gameID_last5 = str(i).zfill(5)\n",
+    "    gameID = gameID_base.format(gameID_last5)\n",
+    "    gameID_list.append(gameID)\n",
+    "    gameID_list.append(gameID)\n",
+    "    \n",
+    "box_df['Game ID'] = gameID_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0a19e86-8a95-43f1-be19-330e1f1a70e3",
+   "metadata": {},
+   "source": [
+    "### Creating & Filling Home/Away Data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "784b5337-b4ab-46ed-b3a3-d21890e51e29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inserting 'Home/Away' data\n",
+    "box_df['Home/Away'] = box_df.reset_index().apply(lambda x: 'Away' if x['index'] % 2 == 0 else 'Home', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58a12925-69e8-4ee7-8a60-7da5a36004ff",
+   "metadata": {},
+   "source": [
+    "### Call on get dates method and duplicate each item in list to match size of dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a58a80f-bf12-4be5-a795-0c6a04cdf383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates_list = []\n",
+    "get_boxscore_dates()\n",
+    "dates = [item for item in dates_list for i in range(2)]\n",
+    "box_df.insert(0, 'Date', dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0076ed-3973-4991-b4bb-95a097920937",
+   "metadata": {},
+   "source": [
+    "## Archiving the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22e09cb7-4e5a-49d2-8f01-ee504589ae50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#archive the data\n",
+    "# Save the dataframe to a file or a database of your choice (you can use any format you want)\n",
+    "box_df.to_csv(\"Spreadsheets/box_score_all.csv\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a81ecb92-2711-4d47-a43f-b1ad6d37c1e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Great alternative, but was getting timeout errors"
    ]
@@ -264,20 +334,8 @@
     "    box_score = boxscoretraditionalv2.BoxScoreTraditionalV2(game_id=game_id).get_data_frames()[0]\n",
     "    # Append the box score data to the dataframe\n",
     "    box_score_df = pd.concat([box_score_df, box_score], ignore_index=True)\n",
-    "    print(game_id)\n",
-    "    \n",
-    "\n",
-    "# Save the dataframe to a file or a database of your choice (you can use any format you want)\n",
-    "box_score_df.to_csv(\"Spreadsheets/box_score_all.csv\", index=False)"
+    "    print(game_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a930fc56-68e8-43e4-98b5-fd7813e9d639",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
