--- a/Basketball Analysis/GettingBoxscores.ipynb
+++ b/Basketball Analysis/GettingBoxscores.ipynb
@@ -296,6 +296,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5db07031-6c47-4f82-a15f-11b1d834a511",
+   "metadata": {},
+   "source": [
+    "## Plotting data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425b57fa-7171-43c9-addc-70814df50ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Spreadsheets/box_score_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce9ebf3a-041e-4a53-83c7-9ee93ed3abcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c154f712-05e3-4676-a125-0655b1b90f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "a81ecb92-2711-4d47-a43f-b1ad6d37c1e4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
